--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -335,8 +335,9 @@
       </div>
     </mat-tab>
 
-    <mat-tab label="ניהול משימות">
-      <app-tab2></app-tab2>
+    <mat-tab label="אנשי קשר">
+      <!-- <app-tab2></app-tab2> -->
+      <app-contacts></app-contacts>
     </mat-tab>
     <mat-tab label=" סטטוס שרתים"> <app-server-ping-check-app></app-server-ping-check-app></mat-tab>
   </mat-tab-group>
