--- a/src/app/contacts/add-edit-contact-dialog/add-edit-contact-dialog.component.html
+++ b/src/app/contacts/add-edit-contact-dialog/add-edit-contact-dialog.component.html
@@ -8,6 +8,11 @@
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="form-field">
+        <mat-label>Dept In Hospital</mat-label>
+        <input matInput formControlName="deptInHospital">
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="form-field">
         <mat-label>Name</mat-label>
         <input matInput formControlName="name" required>
       </mat-form-field>
@@ -28,7 +33,7 @@
     <div class="form-row">
       <mat-form-field appearance="outline" class="form-field">
         <mat-label>Email</mat-label>
-        <input matInput formControlName="email" required>
+        <input matInput formControlName="email" >
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="form-field">
