--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -1,33 +1,37 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 100%;
-  }
-  
-  .content {
-    flex: 1;
-    padding: 16px;
-  }
-  
-  .header-bar {
-    display: flex;
-    align-items: center;
-    margin-bottom: 16px;
-  }
-  
-  .header-bar mat-form-field {
-    flex: 1;
-  }
-  
-  .add-task-btn {
-  
-    background-color: #3f51b5;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 16px;
-  }
-  
- 
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.content {
+  flex: 1;
+  padding: 16px;
+}
+
+.header-bar {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.header-bar .search-field {
+  flex: 1;
+}
+
+.add-task-btn {
+  background-color: #3f51b5;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 56px; /* Ensure the button is the same height as the input field */
+  width: 56px;
+  margin-bottom: 16px;
+  margin-right: 10px;
+}
+
+.mat-form-field {
+  width: 100%;
+}
