--- a/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
+++ b/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
@@ -24,9 +24,12 @@
                     </mat-form-field>
                     <mat-form-field class="filter-field">
                       <mat-label>שם התרופה</mat-label>
-                      <mat-select [formControl]="basicNamesControl" multiple>
-                        <mat-option *ngFor="let option of basicNameOptions" [value]="option">{{ option }}</mat-option>
-                      </mat-select>
+                      <input type="text" matInput [formControl]="basicNamesControl" [matAutocomplete]="autoBasic">
+                      <mat-autocomplete #autoBasic="matAutocomplete" [displayWith]="displayBasicName">
+                        <mat-option *ngFor="let option of filteredBasicNameOptions | async" [value]="option">
+                          {{ option }}
+                        </mat-option>
+                      </mat-autocomplete>
                     </mat-form-field>
                     <mat-form-field class="filter-field">
                       <mat-label>שם קטגוריה</mat-label>
@@ -42,9 +45,12 @@
                     </mat-form-field>
                     <mat-form-field class="filter-field">
                       <mat-label>שם גנרי</mat-label>
-                      <mat-select [formControl]="genericNamesControl" multiple>
-                        <mat-option *ngFor="let option of genericNameOptions" [value]="option">{{ option }}</mat-option>
-                      </mat-select>
+                      <input type="text" matInput [formControl]="genericNamesControl" [matAutocomplete]="autoGeneric">
+                      <mat-autocomplete #autoGeneric="matAutocomplete" [displayWith]="displayGenericName">
+                        <mat-option *ngFor="let option of filteredGenericNameOptions | async" [value]="option">
+                          {{ option }}
+                        </mat-option>
+                      </mat-autocomplete>
                     </mat-form-field>
                     <mat-form-field class="filter-field">
                       <mat-label>תאריך התחלה</mat-label>
