--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -335,9 +335,9 @@
       </div>
     </mat-tab>
 
-    <mat-tab label="אנשי קשר">
+    <mat-tab label="יישומים/אנשי קשר">
       <!-- <app-tab2></app-tab2> -->
-      <app-contacts></app-contacts>
+      <app-applications-list></app-applications-list>
     </mat-tab>
     <mat-tab label=" סטטוס שרתים"> <app-server-ping-check-app></app-server-ping-check-app></mat-tab>
   </mat-tab-group>
